--- a/popup.css
+++ b/popup.css
@@ -1,14 +1,40 @@
 .tab{
   display: flex;
+  /* justify-content: center; */
   width: 200px;
   height: 60px;
 }
 .tab-title{
-  width: 80px;
-  margin: 10% auto;
+  width: 60px;
+  padding-top: 14px;
+  text-align: center;
 }
 .key-list{
   width: 100%;
   height: 100px;
   overflow: scroll;
+  border: 1px solid black;
+}
+.setting{
+  display: none;
+}
+.active-tab{
+  background-color: rgb(230, 230, 230);
+}
+.active-item{
+  background-color: rgb(136, 138, 255);
+}
+.info-detail{
+  display: flex;
+  flex-direction: column;
+}
+.info-detail > p{
+  margin: 10px auto;
+  font-size: 150%;
+  text-align: center;
+}
+.info-detail > p > span{
+  margin-right: 5px;
+  font-size: 120%;
+  color: rgb(255, 0, 0);
 }
