重构为多个功能的浏览助手

--- a/options.css
+++ b/options.css
@@ -1,35 +1,11 @@
-/*
- * Base structure
- */
-
-/* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
 }
 
-
-/*
- * Global add-ons
- */
-
-.sub-header {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
-}
-
-/*
- * Top navigation
- * Hide default border to remove 1px line.
- */
 .navbar-fixed-top {
   border: 0;
 }
 
-/*
- * Sidebar
- */
-
-/* Hide for mobile, show later */
 .sidebar {
   display: none;
 }
@@ -49,28 +25,6 @@ body {
   }
 }
 
-/* Sidebar navigation */
-.nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-  color: #fff;
-  background-color: #428bca;
-}
-
-
-/*
- * Main content
- */
-
 .main {
   padding: 20px;
 }
@@ -80,39 +34,17 @@ body {
     padding-left: 40px;
   }
 }
-.main .page-header {
-  margin-top: 0;
+
+.block-list-component {
+  width: 740px;
 }
 
-.checkbox-e{
-  margin-right: 40px;
+.block-list-component .block-list {
+  margin-top: 10px;
+  height: 200px;
+  overflow-y: scroll;
 }
 
-
-/*
- * Placeholder dashboard ideas
- */
-
-.placeholders {
-  margin-bottom: 30px;
-  text-align: center;
-}
-.placeholders h4 {
-  margin-bottom: 0;
-}
-.placeholder {
-  margin-bottom: 20px;
-}
-.placeholder img {
-  display: inline-block;
-  border-radius: 50%;
-}
-/*
- * Table
- */
-.table-border {
-  width: 500px;
-}
-td .close{
-  float: left;
+.func .name {
+  margin-right: 10px;
 }
